--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     </head>
     <body>
         <div id="calcBody">
-            <div>display</div>
+            <div id="display">display</div>
             <div id="buttonArea">
                 <button>1</button>
                 <button>2</button>
