--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
                 <button>8</button>
                 <button>9</button>
                 <button>0</button>
-                <button>+</button>
-                <button>-</button>
-                <button>*</button>
-                <button>/</button>
-                <button>=</button>
-                <button>clear</button>
+                <button class="operator">+</button>
+                <button class="operator">-</button>
+                <button class="operator">*</button>
+                <button class="operator">/</button>
+                <button class="operator">=</button>
+                <button class="aux">clear</button>
             </div>
         </div>
 
