add additional aux buttons, reorder rows

--- a/index.html
+++ b/index.html
@@ -3,28 +3,31 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Document</title>
+        <title>Calculator</title>
         <link rel="stylesheet" href="style.css" />
     </head>
     <body>
         <div id="calcBody">
             <div id="display">0</div>
             <div id="buttonArea">
-                <button>1</button>
-                <button>2</button>
-                <button>3</button>
-                <button>4</button>
-                <button>5</button>
-                <button>6</button>
                 <button>7</button>
                 <button>8</button>
                 <button>9</button>
-                <button>0</button>
-                <button class="operator">+</button>
-                <button class="operator">-</button>
-                <button class="operator">*</button>
                 <button class="operator">/</button>
+                <button>4</button>
+                <button>5</button>
+                <button>6</button>
+                <button class="operator">*</button>
+                <button>1</button>
+                <button>2</button>
+                <button>3</button>
+                <button class="operator">-</button>
+                <button>0</button>
+                <button>.</button>
                 <button class="operator">=</button>
+                <button class="operator">+</button>
+                <button class="aux">+/-</button>
+                <button class="aux">delete</button>
                 <button class="aux">clear</button>
             </div>
         </div>
