--- a/index.html
+++ b/index.html
@@ -10,25 +10,25 @@
         <div id="calcBody">
             <div id="display">0</div>
             <div id="buttonArea">
-                <button>7</button>
-                <button>8</button>
-                <button>9</button>
+                <button class="number">7</button>
+                <button class="number">8</button>
+                <button class="number">9</button>
                 <button class="operator">/</button>
-                <button>4</button>
-                <button>5</button>
-                <button>6</button>
+                <button class="number">4</button>
+                <button class="number">5</button>
+                <button class="number">6</button>
                 <button class="operator">*</button>
-                <button>1</button>
-                <button>2</button>
-                <button>3</button>
+                <button class="number">1</button>
+                <button class="number">2</button>
+                <button class="number">3</button>
                 <button class="operator">-</button>
-                <button>0</button>
-                <button>.</button>
-                <button class="operator">=</button>
+                <button class="operator">0</button>
+                <button class="decimal">.</button>
+                <button class="equals">=</button>
                 <button class="operator">+</button>
-                <button class="aux">+/-</button>
-                <button class="aux">delete</button>
-                <button class="aux">clear</button>
+                <button class="aux, negate">+/-</button>
+                <button class="aux, delete">delete</button>
+                <button class="aux, clear">clear</button>
             </div>
         </div>
 
