update clear to display following numbers correctly

--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
                 <button class="number">2</button>
                 <button class="number">3</button>
                 <button class="operator">-</button>
-                <button class="operator">0</button>
+                <button class="number">0</button>
                 <button class="decimal">.</button>
                 <button class="equals">=</button>
                 <button class="operator">+</button>
-                <button class="aux, negate">+/-</button>
-                <button class="aux, delete">delete</button>
-                <button class="aux, clear">clear</button>
+                <button class="aux negate">+/-</button>
+                <button class="aux delete">delete</button>
+                <button class="aux clear">clear</button>
             </div>
         </div>
 
